# esp-fleet-manager

./: .gitignore  README.md
dashboard/: README.md  package-lock.json  package.json  test_mqtt.cjs  test_mqtt2.cjs
dashboard/Fleet_Management/: CMakeLists.txt
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/projects/[id]/: page.tsx
dashboard/src/app/signup/: page.tsx
dashboard/src/components/: DeviceCard.tsx  DeviceForm.tsx  Navbar.tsx  OtaModal.tsx  ProjectForm.tsx  ProtectedRoute.tsx  UploadFirmwareModal.tsx
dashboard/src/contexts/: AuthContext.tsx
dashboard/src/hooks/: useFirestore.ts  useFirmware.ts  useMqtt.ts
dashboard/src/lib/: firebase.ts
dashboard/src/types/: index.ts
firmware/components/ds18b20/: CMakeLists.txt
firmware/components/owb/: CMakeLists.txt
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/main/config/: device_config.h
firmware/main/connectivity/: wifi_mgr.c  wifi_mgr.h
firmware/main/mqtt/: mqtt_mgr.c  mqtt_mgr.h
firmware/main/ota/: ota_mgr.c  ota_mgr.h
firmware/main/reporting/: reporter.c  reporter.h
firmware/main/sensors/: ds18b20_sensor.c  ds18b20_sensor.h  water_sensor.c  water_sensor.h
firmware/main/utils/: nvs_utils.c  nvs_utils.h
